ESP32 v3.0: Jarvis integration - door sensor, servo lock, schedules, patrol, intruder detection, MQTT bridge, ESP32 manager, web control panel
ESP32 Server:
- Door sensor (GPIO27) with hardware ISR and debouncing
- Servo lock SG90 (GPIO26) with EEPROM persistence
- IR blaster pin (GPIO33) reserved
- Schedule system (16 entries, FreeRTOS task)
- Jarvis MQTT command routing (relay/lock/buzz/scene/status)
- REST endpoints: /door, /lock, /schedules, /jarvis/heartbeat
- EEPROM expanded to 1024 bytes, boot counter
- Heartbeat publishing every 15 seconds

ESP32-CAM:
- Night vision auto-detection from frame brightness
- Patrol mode with periodic AI-assisted capture
- Intruder alert system (consecutive motion, flash strobe, evidence)
- Person detection and face identification from AI response
- Jarvis MQTT command handling (patrol/intruder/identify/snapshot)
- Jarvis HTTP endpoints: /jarvis/status, /jarvis/detect
- Watchdog timer, PSRAM cache fix
- Heartbeat with full device state

Python Services:
- MQTTBridgeService: 20+ topic subscriptions, event routing
- ESP32ManagerService: HTTP + MQTT unified device control
- Enhanced HomeAutomationService: door/lock/schedule/camera/heartbeat
- Updated config with MQTT settings and topic constants

API (30+ new routes):
- Device management, MQTT stats, server control, camera control
- MQTT fire-and-forget commands (relay/lock/capture/patrol/scene)

Web Dashboard:
- ESP32Control panel with Server/Camera/MQTT tabs
- Sensor cards, relay buttons, door/lock controls
- Camera stream, patrol/intruder toggles, face identify
- Auto-refresh every 10 seconds

--- a/esp32-cam/platformio.ini
+++ b/esp32-cam/platformio.ini
@@ -12,5 +12,7 @@ lib_deps =
 build_flags =
     -DCORE_DEBUG_LEVEL=3
     -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
 
 board_build.partitions = huge_app.csv
+monitor_filters = esp32_exception_decoder
