--- a/esp32-server/platformio.ini
+++ b/esp32-server/platformio.ini
@@ -13,6 +13,8 @@ lib_deps =
     adafruit/DHT sensor library@^1.4.6
     adafruit/Adafruit Unified Sensor@^1.1.14
     marian-craciunescu/ESP32Ping@^1.7
+    madhephaestus/ESP32Servo@^1.1.1
+    crankyoldgit/IRremoteESP8266@^2.8.6
 
 build_flags =
     -DCORE_DEBUG_LEVEL=3
